Fix logo align

--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -56,6 +56,7 @@
         width: 115.9px;
         padding-top: 30px;
         padding-bottom: 45px;
+        transform:translateX(-10px);
         @media all and (min-width:768px) {
             padding-bottom: 0;
         }
